--- a/plugins/404.html
+++ b/plugins/404.html
@@ -12,7 +12,7 @@
   <meta name="creator" content="RudRecciah"/>
   <meta name="publisher" content="RudRecciah"/>
   <link type="text/css" href="404.css" rel="stylesheet">
-  <title>RudRecciah</title>
+  <title>RudRecciah - 404</title>
 </head>
 <body>
   <div class="container">
