fixed 404 page, updated xp modal

--- a/plugins/404.html
+++ b/plugins/404.html
@@ -11,7 +11,7 @@
   <meta name="author" content="RudRecciah"/>
   <meta name="creator" content="RudRecciah"/>
   <meta name="publisher" content="RudRecciah"/>
-  <link type="text/css" href="404.css" rel="stylesheet">
+  <link type="text/css" href="https://rudrecciah.dev/404.css" rel="stylesheet">
   <title>RudRecciah - 404</title>
 </head>
 <body>
