--- a/plugins/lostmedia/index.html
+++ b/plugins/lostmedia/index.html
@@ -21,7 +21,7 @@
         Aw...
       </h1>
       <p class="text-body">
-        Sadly, this is lost media. But, I have it. For whatever reason, I have not published the media, but I can give it to you. Please <a href="mailto:contact@rudrecciah.dev">email me</a> to ask about it.
+        Sadly, this is lost media. But, I have it. For whatever reason, I have not published the media, but I can give it to you. Please <a href="mailto:me@rudrecciah.dev">email me</a> to ask about it.
       </p>
     </div>
   </body>
