--- a/plugins/lostmedia/index.html
+++ b/plugins/lostmedia/index.html
@@ -12,7 +12,7 @@
     <meta name="creator" content="RudRecciah"/>
     <meta name="publisher" content="RudRecciah"/>
     <link type="text/css" href="style.css" rel="stylesheet">
-    <title>RudRecciah - Bugs</title>
+    <title>RudRecciah - Lost Media</title>
     <link href="./style.css" rel="stylesheet"/>
   </head>
   <body>
